Added Arrays.reverse methods to library